# socflow

./: .env.example  .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  PRD.md  README.md  pyproject.toml
.cursor/commands/: onboard-new-dev.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  general_issue.yml
config/: settings.default.yml  settings.yml
src/: app.py  main.py  tui.py
src/collectors/: __init__.py  base.py  bluesky.py  mastodon.py  reddit.py
src/config/: __init__.py  settings.py  settings.yml
src/database/: __init__.py  base.py  factory.py  sqlite.py
src/models/: __init__.py  base.py  bluesky.py  mastodon.py  reddit.py
src/socflow/: cli.py
src/socflow/database/: __init__.py  sqlite.py
src/socflow/models/: __init__.py  reddit.py  settings.py
src/utils/: logger.py
tests/: README.md  __init__.py  conftest.py
