[project]
name = "socflow"
version = "0.1.0"
description = "Unified data collection framework for Reddit, Bluesky, Mastodon, and News sources."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.0",
    "python-dotenv>=1.0.0",
    "praw>=7.8.1",
    "pydantic>=2.12.0",
    "pydantic-settings>=2.0.0",
    "pyyaml>=6.0.3",
    "sqlalchemy>=2.0.0",
    "tqdm>=4.67.1",
    "pandas>=2.0.0",
    "atproto>=0.0.50",
    "mastodon.py>=1.8.0",
    "requests>=2.31.0",
    "rich>=14.2.0",
    "websockets>=12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/socflow"]

[project.scripts]
socflow = "socflow.cli:main"
sf = "socflow.cli:main"